--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-/data/*
-/.env/
+/DATA/
+/logs/
+/staticfiles/
+.git/
+/.idea/
+**/migrations/
+**/__pycache__/
 /templates/test.html
-/logs/*
+test.py
