--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ dill==0.3.6
 Django==4.2
 et-xmlfile==1.1.0
 jieba==0.42.1
-jieba-fast==0.53
 mysqlclient==2.1.1
 numpy==1.24.2
 openpyxl==3.1.2
@@ -14,6 +13,7 @@ pandas==2.0.0
 pip==23.0.1
 pip-review==1.3.0
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2023.3
 setuptools==67.6.1
 six==1.16.0
